app/assets/stylesheets/home.css.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.mobileButtonTable {
  display:table; 
  table-layout:fixed; 
  text-align:center; 
  width:100%;
}

.mobileButtonCell {
  display:table-cell;
  width:50%;
  
  a
  {
    width:80%;
  }
}

.news_description
{
  height:110px ; 
  word-wrap: break-word ;
  overflow: hidden  
}

.news_featured_image
{
  float:left;
  clear:left;
  width:50%;
  height:210px;
  margin-right:7px;
  div.item_image
  {
    width:100% ;
    height:100%;
    background-position:center;
    background-repeat: no-repeat;
    background-size: 175%;
    overflow:hidden;
  }
}

.c_item
{
  overflow:hidden;
  background-color: #e8e8e8;

  border-width: 1px;
  
  -moz-box-shadow: 0px 5px 5px #888888;
  -webkit-box-shadow: 0px 5px 5px #888888;
  box-shadow: 0px 5px 5px #888888;
  
}

.c_item:hover
{
  -moz-box-shadow: 0 0 15px 2px #888888;
  -webkit-box-shadow: 0 0 15px 2px #888888;
  box-shadow: 0 0 15px 2px #888888;  
}

